# poweretl

./: README.md  poweretl.code-workspace
common/: .flake8  .pylintrc  output.txt  poetry_init.bat  pyproject.toml  reinstall.bat
common/src/poweretl/common/: __init__.py
common/src/poweretl/common/helpers/: __init__.py  meta_model_updater.py
common/src/poweretl/common/managers/: __init__.py  base_model_manager.py
common/src/poweretl/common/managers/_data/: sql_model_manager.yaml
common/src/poweretl/common/model/: __init__.py
common/src/poweretl/common/model/config/: FileConfigProvider.py  JsonConfigProvider.py  _MultiFileReader.py  __init__.py  file_config_provider.py
common/src/poweretl/common/providers/: __init__.py  base_meta_provider.py  db_meta_provider.py  file_meta_provider.py  file_model_provider.py
common/src/poweretl/common/utils/: __init__.py
common/src/poweretl/common/utils/file/: BaseFileMerger.py  FileMerger.py  JsonFileMerger.py  MultiFileReader.py  YamlFileMerger.py  __init__.py
common/src/poweretl/common/utils/text/: TokensReplacer.py
common/tests/managers/: test_base_model_manager.py
common/tests/managers/_data/: expected_commands.txt  meta.json
common/tests/model/config/: _config.json  test_FileConfigProvider.py  test_JsonFileProvider.py  test_MultiFileReader.py  test_file_config_provider.py
common/tests/model/config/_data/: 02.prod.json
common/tests/model/config/_data/01/: 01.config.json
common/tests/model/config/_data/config/: 01.global.json  01.global.jsonc  01.global.yaml  02.prod.json
common/tests/model/config/_data/result/: merged.json
common/tests/providers/: test_file_meta_provider_basic.py  test_file_meta_provider_full.py  test_file_meta_provider_int.py  test_file_meta_provider_uni.py  test_file_meta_provider_unit.py  test_file_model_provider.py
common/tests/providers/_data/meta/: meta_init.json  model_init.json  model_update.json
common/tests/providers/_data/model/: 01.global.jsonc  02.prod.json
common/tests/providers/_data/result/: meta.json  model.json
common/tests/utils/file/: _config.json  test_FileCommandSplitter.py  test_MultiFileReader.py
common/tests/utils/file/_data/: global.json
common/tests/utils/text/: test_TokensReplacer.py
databricks/: poetry_init.bat  pyproject.toml  reinstall.bat
databricks/src/poweretl/databricks/: __init__.py
databricks/src/poweretl/databricks/helpers/: __init__.py  session.py  session_utils.py
databricks/src/poweretl/databricks/helpers/inf_schema/: __init__.py  dbx_schema_reader.py
databricks/src/poweretl/databricks/managers/: __init__.py  dbx_model_manager.py
databricks/src/poweretl/databricks/model/: DatabricksMetaProvider.py  __init__.py
databricks/src/poweretl/databricks/providers/: __init__.py  dbx_meta_provider.py  dbx_volume_file_storage_provider.py  volume_dbx_file_storage_provider.py
databricks/tests/: README.md
databricks/tests/helpers/inf_schema/: test_dbx_schema_reader.py
databricks/tests/managers/: test_dbx_model.manager.py  test_dbx_model_manager.py  test_dbx_model_manager_int.py
databricks/tests/managers/_data/: 01.meta_init.json  01.meta_init_result.json  02.meta_update.json  02.meta_update_result.json  03.meta_cleanup.json  03.meta_cleanup_results.json
databricks/tests/providers/: test_dbx_volume_file_storage_provider_int.py  test_dbx_volume_file_storage_provider_uni.py
examples/: .coveragerc  README.md  poetry_init.bat  pyproject.toml  reinstall.bat
examples/src/poweretl-examples/databricks/: test.py
examples/src/poweretl/examples/databricks/: test.py
examples/tests/: test.py
examples/tests/databricks/: .gitignore  README.md
examples/tests/databricks/managers/dbx_model_manager/: README.md  run_from_databricks.py  run_without_pytest.py  test_dbx_model_manager.py
examples/tests/databricks/managers/dbx_model_manager/_model_cleanup/: model.jsonc
examples/tests/databricks/managers/dbx_model_manager/_model_definition/: 01.global.yaml  02.tst.yaml  prd.yaml
examples/tests/utils/file/: commands.csv  test_commands_splitter.py  test_files_merger.py
examples/tests/utils/file/_data/commands_splitter_results/: commands.csv
examples/tests/utils/file/_data/files_merger/: 02.prod.yaml
examples/tests/utils/file/commands_splitter/: test_commands_splitter.py
examples/tests/utils/file/commands_splitter/_commands/: 01.params-global.yaml  02.params-prod.yaml
examples/tests/utils/file/commands_splitter/_results/: commands.csv
examples/tests/utils/file/files_merger/: test_files_merger.py
examples/tests/utils/file/files_merger/_configs/: 01.global.jsonc
utils/: README-PIP.md  README.md  code_check.bat  poetry_init.bat  pyproject.toml
utils/src/poweretl/utils/: __init__.py
utils/src/poweretl/utils/file/: __init__.py  file_command_splitter.py  file_merger.py  file_path_organizer.py  file_serializer.py  multi_file_reader.py
utils/src/poweretl/utils/helpers/: __init__.py  dataclass_upgrader.py
utils/src/poweretl/utils/managers/: __init__.py  ifile_storage_manager.py  osfile_storage_manager.py
utils/src/poweretl/utils/providers/: __init__.py  ifile_storage_provider.py  mem_file_storage_provider.py  os_file_storage_provider.py  osfile_storage_provider.py
utils/src/poweretl/utils/tests/: __init__.py  config_reader.py  helpers.py  test_config.py
utils/src/poweretl/utils/text/: __init__.py  tokens_replacer.py
utils/tests/file/: _config.json  test_FileCommandSplitter.py  test_FileMerger.py  test_MultiFileReader.py  test_file_command_splitter.py  test_file_merger.py  test_file_path_organizer.py  test_file_serializer.py  test_mult_file_reader.py
utils/tests/file/_data/FileCommandSplitter/: 01.sample_meta.sql  02.sample_meta_2.sql  03.sample_semver_1.sql  04.sample_semver_2.sql
utils/tests/file/_data/FileMerger/config/: 02.prod.json
utils/tests/helpers/: test_dataclass_upgrader.py
utils/tests/providers/: test_mem_file_storage_provider.py  test_os_file_storage_provider.py
utils/tests/text/: test_TokensReplacer.py  test_tokens_replacer.py
(+67 files in other folders)
