[project]
name = "poweretl-common"
version = "0.1.0"
description = ""
authors = [
    {name = "plazacraft",email = "r.plazaman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "poweretl", from = "src"}]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poweretl-defs = { path = "../defs/" }
poweretl-utils = { path = "../utils/" }
pytest = "^7.4.0"
pytest-cov = "^7.0.0"
black = "^25.9.0"
pylint = "^4.0.0"
flake8 = "^7.3.0"
isort = "^7.0.0"

[tool.poetry.dependencies]
poweretl-defs = "*"
poweretl-utils = "*"
dacite = "^1.9.2"
deepdiff = "^8.6.1"
deepmerge = "^2.0"
pyyaml = "^6.0.3"
json5 = "^0.12.1"
# pydantic = "^2.12.3"
