[project]
name = "poweretl-databricks"
version = "0.1.0"
description = ""
authors = [
    {name = "plazacraft",email = "r.plazaman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "poweretl", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poweretl-utils = { path = "../utils/" }
poweretl-defs = { path = "../defs/" }
poweretl-common = { path = "../common/"}
pytest = "^7.4.0"
pytest-cov = "^7.0.0"
black = "^25.9.0"
pylint = "^4.0.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
ipykernel = "~6.30"
nbconvert = "*"
import-ipynb = "*"

[tool.poetry.dependencies]
poweretl-utils = "*"
poweretl-defs = "*"
poweretl-common = "*"
databricks-connect = "~17.3"
